@@ -41,6 +41,8 @@ Version 1.6
 
 - Fix a bug in the Prolog lexer with names that start with 'is' (#810)
 
+- Rewrite Dylan lexer, add Dylan LID lexer (PR#147)
+
 
 Version 1.5
 -----------
